<resources>
    <string name="app_name">소공</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="health_fragment">헬스장</string>
    <string name="child_fragment">어린이집</string>
    <string name="bus_fragment">버스</string>
    <string name="hair_fragment">미용실</string>
</resources>
